# hi_agent

./: README.md
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  qa copy.py  qa.py  qa2.py  run.py
backend/app/: main.py
backend/app/router/: chat.py  video.py
backend/app/service/: process_video.py
backend/app/utils/: emit.py  llm.py  llm2.py  logger.py  mcp_remote.py  video_task_events.py
backend/app/utils/video_utils/: ASR_VAD.py  com_helper.py  generate_heading.py  ocr_similarity.py  video_cut.py
backend/output/0f65d8d7-e29e-47_11/: Ai_result.md  Ai_video_cut_result.md  merge.json  origin_result.md  sse_events.jsonl
backend/output/4adc2813-0f60-47_11/: Ai_result.md  Ai_video_cut_result.md  origin_result.md  sse_events.jsonl
backend/output/51cec3df-8883-45_11/: sse_events.jsonl
backend/output/8f50950e-7bcf-4f_11/: Ai_result.md  Ai_video_cut_result.md  origin_result.md  sse_events.jsonl
backend/output/94915c75-9ef8-4e_222/: Ai_result.md  Ai_video_cut_result.md  merge.json  origin_result.md  sse_events.jsonl
backend/output/e0cf1400_11/: Ai_result.md  Ai_video_cut_result.md  origin_result.md  sse_events.jsonl
frontent/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontent/src/: App.css  App.jsx  index.css  main.jsx
frontent/src/pages/: VideoParse.jsx
frontent/src/pages/components/: EditorPage.jsx  Header.jsx  ProcessingStatus.jsx  ReportViewer.jsx  VideoUpload.jsx
