[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "hello-agents[protocols]>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=1.2.22",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]
