[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "addict>=2.4.0",
    "datasets>=4.8.4",
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=1.2.22",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=0.2.0",
    "modelscope>=1.35.3",
    "funasr>=1.0.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.8.0",
    "simplejson>=3.20.2",
    "sortedcontainers>=2.4.0",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "uvicorn>=0.32.0",
    "torchaudio>=2.11.0",
    "rapidocr-onnxruntime>=1.4.4",
]

[tool.uv]
# 【关键修改】删除强制 Linux 环境的配置，让 uv 自动适配 Windows 系统
# 原行已删除：environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
# 保留 PyTorch CPU 源配置，确保 Windows 下载 CPU 版本
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # 仅 PyTorch 系列包使用该源，避免污染其他依赖